--- a/docs/scss/components/_example.scss
+++ b/docs/scss/components/_example.scss
@@ -40,6 +40,10 @@ rh-alert + .example {
     }
   }
 
+  + table {
+    margin-top: -48px;
+  }
+
   img:only-child {
     display: block;
     margin: 0 auto;
